# AROS_SLAM

./: .gitignore  AVGSlam.cpp  AVGSlam.hpp  CMakeLists.txt  README.md  conanfile.py  main.cpp
config/: dev_config.yaml  pre_est_config.yaml
config/data_conf/: kitti.yaml  tartanair.yaml
config/sys_conf/: dev_config.yaml  gt_config.yaml
dataStructures/: CMakeLists.txt  frameData.cpp  frameData.hpp  keypoint.cpp  keypoint.hpp  map3D.cpp  map3D.hpp  mapPoint.cpp  mapPoint.hpp  match.cpp  match.hpp  parametrization.cpp  parametrization.hpp  pose.cpp  pose.hpp
framePreprocessor/: CMakeLists.txt  framePreprocessor.cpp  framePreprocessor.hpp
framePreprocessor/preprocessMethods/: CMakeLists.txt  autocorrelation.cpp  autocorrelation.hpp  blur.cpp  blur.hpp  fft.cpp  fft.hpp  homomorphicFilter.cpp  homomorphicFilter.hpp  noise.cpp  noise.hpp
gui/: CMakeLists.txt  guiUtil.cpp  guiUtil.hpp  pangolinInterface.cpp  pangolinInterface.hpp
keypointExtraction/: CMakeLists.txt  findKeypoints.cpp  findKeypoints.hpp  keypointExtraction.cpp  keypointExtraction.hpp
keypointExtraction/extractionMethods/: CMakeLists.txt  blockFeatures.cpp  blockFeatures.hpp  bucketing.cpp  bucketing.hpp  descriptorDistribution.cpp  descriptorDistribution.hpp  extraction_gt.cpp  extraction_gt.hpp  orb.cpp  orb.hpp  orbOS.cpp  orbOS.hpp  orb_test.cpp  orb_test.hpp
keypointMatching/: CMakeLists.txt  matchKeypoints.cpp  matchKeypoints.hpp
keypointMatching/matchingMethods/: CMakeLists.txt  bruteForceMatching.cpp  bruteForceMatching.hpp  opticalFlowFarneback.cpp  opticalFlowFarneback.hpp  phaseCorrelation.cpp  phaseCorrelation.hpp
mapPointHandler/: CMakeLists.txt  mapPointCulling.cpp  mapPointCulling.hpp  mapPointRegistration.cpp  mapPointRegistration.hpp
mapPointHandler/mapPointRegistrationMethods/: CMakeLists.txt  depthGT.cpp  depthGT.hpp  linearInclusiveMPReg.cpp  linearInclusiveMPReg.hpp
mapPointHandler/triangulationMethods/: CMakeLists.txt  triangulateMany.cpp  triangulateMany.hpp
motionPrior/: CMakeLists.txt  motionPrior.cpp  motionPrior.hpp
motionPrior/motionPriorMethods/: CMakeLists.txt  groundTruth.cpp  groundTruth.hpp  prevEst.cpp  prevEst.hpp
pangolinSetup/: conanfile.py
poseCalculation/: CMakeLists.txt  poseCalculation.cpp  poseCalculation.hpp
poseCalculation/poseCalculationMethods/: CMakeLists.txt  GJET.cpp  GJET.hpp  GJET2.cpp  GJET2.hpp  GJETMO.cpp  blockShift.cpp  blockShift.hpp  config.yaml  copyMotionPrior.cpp  copyMotionPrior.hpp  nonLinReproOpt.cpp  nonLinReproOpt.hpp  point5OutlierRejection.cpp  point5OutlierRejection.hpp
sequencer/: CMakeLists.txt  sequencer.cpp  sequencer.hpp  sequencer2.cpp  sequencer2.hpp  sequencer3.cpp  sequencer3.hpp
test/: CMakeLists.txt  concurrencyTest.cpp  concurrencyTest.hpp  helloPangolin.cpp  helloPangolin.hpp  matchingTest.cpp  matchingTest.hpp  pangolinMultiView.cpp  pangolinMultiView.hpp  testClassLink.cpp  testClassLink.hpp  testClassNode.cpp  testClassNode.hpp
tracking/: CMakeLists.txt  tracking.cpp  tracking.hpp
util/: CMakeLists.txt  math_util.cpp  math_util.hpp  util.cpp  util.hpp
